--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,6 @@
+
 .page-header {
-    background-color: #C25100;
+    background-color: #FF9900;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -15,7 +16,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Montserrat';
 }
 
 .date {
